# prediction

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-devel.sh  exec-terminal.sh  package.xml  requirements.txt  run-devel.sh
config/: prediction_params.yml  processing_params.yml  state_estimation.yml
data/: projection_matrix.csv
include/prediction/: ExecTime.hpp
launch/: gazebo.launch  state_estimation.launch  unit_tests.test  unity.launch  unity_tiago.launch  video.launch
msg/: Limits.msg  Path.msg  States.msg
scripts/: create_env.sh
src/camera_calibration/: camera_calibration.py  transformation_test.ipynb
src/ground_truth/: ground_truth.py  ground_truth_2024-02-17_11-27-21.json  ground_truth_2024-02-17_13-49-30.json  ground_truth_2024-02-26_23-22-26.json  plot.ipynb  tape3.mtl
src/image_coordinates/: image_coordinates.py
src/models/: erfnet.py
src/pi_controller/: pi_controller.py
src/prediction/: prediction.py
src/processing/: Processing.cpp  ProcessingNode.cpp  main.cpp
src/processing/include/: Processing.hpp  ProcessingNode.hpp
src/state_estimation/: StateEstimation.cpp  StateEstimationNode.cpp  main.cpp  plot.ipynb  state_saver.py  states.json  states_allan.json  states_tiago.json
src/state_estimation/include/: StateEstimation.hpp  StateEstimationNode.hpp
src/util/: util.py
src/util/exec_time_cpp/: ExecTime.cpp
tests/: processing_test.cpp  state_estimation_test.cpp
weights/: 20231018_after_ramp.h5  20240216_unity_fine_tunning.h5
